log
Wed 20 Mar 2024 01:19:11 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
280a43c
Wed 20 Mar 2024 01:26:09 AM UTC: 
 exercises.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:3: error: unknown type name ‘Node’
   64 |   Node* current = first(L);
      |   ^~~~
exercises.c:67:29: error: request for member ‘data’ in something not a structure or union
   67 |       suma += *(int*)current->data;
      |                             ^~
Compilation failed
f9f45b1
Wed 20 Mar 2024 01:26:32 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:3: error: unknown type name ‘LIst’; did you mean ‘List’?
   64 |   LIst* current = first(L);
      |   ^~~~
      |   List
exercises.c:67:29: error: request for member ‘data’ in something not a structure or union
   67 |       suma += *(int*)current->data;
      |                             ^~
Compilation failed
4ebc486
Wed 20 Mar 2024 01:26:43 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:29: error: invalid use of incomplete typedef ‘List’
   67 |       suma += *(int*)current->data;
      |                             ^~
Compilation failed
f0177d7
Wed 20 Mar 2024 01:29:13 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
b58f6e5
Wed 20 Mar 2024 01:29:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:68:22: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   68 |       current = next(current);
      |                      ^~~~~~~
      |                      |
      |                      int *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘int *’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
66822a6
